[gd_scene load_steps=7 format=3 uid="uid://nw6cljcfvvw0"]

[ext_resource type="Texture2D" uid="uid://sdueq0u3s3w0" path="res://assets/sprites/enemy.png" id="1_b0ihr"]
[ext_resource type="Script" path="res://scripts/eel.gd" id="1_yw3q7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bvhxg"]
atlas = ExtResource("1_b0ihr")
region = Rect2(0, 0, 104, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jgdx0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvhxg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vj4lv"]
radius = 8.0
height = 98.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6cgvn"]
radius = 192.094

[node name="eel" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_yw3q7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jgdx0")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vj4lv")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_6cgvn")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(97, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-94, 0)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
